Fix dropdown highlight color in dark mode

--- a/_sass/arkose.scss
+++ b/_sass/arkose.scss
@@ -22,7 +22,7 @@
     height: 3rem;
   }
   .filter-ml_subfield .dropdown-title-box {
-    background-color: #e8f6f3;
+    background-color: var(--color-dropdown-highlight);
   }
   .dropdown-title {
     font-size: 1.25rem;
